feat: adicionando resources

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "emulate:android:virtual": "ionic cordova emulate android -l",
-    "emulate:android:device": "ionic cordova run android -l"
+    "emulate:android:device": "ionic cordova run android -address 0.0.0.0 --port 8100 --no-native-run -l"
   },
   "private": true,
   "dependencies": {
